--- a/CupcakeShopClient/package.json
+++ b/CupcakeShopClient/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
