--- a/CupcakeShop.Infrastructure/appsettings.json
+++ b/CupcakeShop.Infrastructure/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=cupcakeshopdb;Username=postgres;Password=lolkek"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=cupcakeshop;Username=postgres;Password=lolkek"
   }
 }
