add GetBestsellers endpoint

--- a/CupcakeShop.API/appsettings.json
+++ b/CupcakeShop.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=cupcakeshopdb;Username=postgres;Password=lolkek"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=cupcakeshop;Username=postgres;Password=lolkek"
   }
 }
