--- a/CupcakeShop.Client/Dockerfile
+++ b/CupcakeShop.Client/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:18 as build
 WORKDIR /app
-COPY package*.json ./
+COPY /CupcakeShop.Client/package*.json ./
 RUN npm install
-COPY . .
+COPY ./CupcakeShop.Client .
 RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
