--- a/CupcakeShop.API/appsettings.json
+++ b/CupcakeShop.API/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=cupcakeshop;Username=postgres;Password=lolkek"
+    "DevConnection": "Host=localhost;Port=5432;Database=cupcakeshop;Username=postgres;Password=lolkek",
+    "ProdConnection": "Host=postgresql-container;Port=5432;Database=cupcakeshop;Username=postgres;Password=lolkek"
   }
+
+  
 }
