--- a/CupcakeShop.API/Properties/launchSettings.json
+++ b/CupcakeShop.API/Properties/launchSettings.json
@@ -33,6 +33,7 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "DockerProd",
         "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
