fix relation between api and client in docker containers

--- a/CupcakeShop.API/Dockerfile
+++ b/CupcakeShop.API/Dockerfile
@@ -24,6 +24,6 @@ RUN dotnet publish CupcakeShop.API.csproj -c $BUILD_CONFIGURATION -o /app/publis
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_ENVIRONMENT=DockerProd
 
-
-ENTRYPOINT ["dotnet", "CupcakeShop.API.dll"]
+ENTRYPOINT ["dotnet", "CupcakeShop.API.dll","--environment=X"]
